data/derived/comb/progs/unify/prog7160.ml.out
Characters 446-463:
  | _ -> buildThresh(build(rand, depth - 1),build(rand, depth - 1),buildY(rand, depth - 1),buildX(rand, depth - 1));;
                                                                         ^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type unit
